--- a/edit.slim
+++ b/edit.slim
@@ -26,9 +26,9 @@ html
             li: label
               | Color:
               select name="color"
-                option value="white" White
-                option value="blue" Commie
-                option value="red" Republican
+                option value="white" Snow
+                option value="blue" Cold
+                option value="red" Hot
             li: label
               | Email:
               input( name="mail" type="email" placeholder="address@where.com" required )
